--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <main id="#main">
-            <section class="main-section" id="Intro">
+            <section class="main-section" id="The_Last_Jedi_Docu_Page">
                 <header>The Last Jedi Docu Page</header>
                 <article>
                     <p>
@@ -51,7 +51,7 @@
                     </ul>
                 </article>
             </section>
-            <section class="main-section" id="events">
+            <section class="main-section" id="Evacuating_D'Qar">
                 <header>Evacuating D'Qar</header>
                 <article>
                     <p>
@@ -59,7 +59,7 @@
                     </p>
                 </article>
             </section>
-            <section class="main-section" id="events2">
+            <section class="main-section" id="Bomber_run">
                 <header>Bomber run</header>
                 <article>
                     <p>
@@ -67,10 +67,24 @@
                     </p>
                 </article>
             </section>
-            <section class="main-section">
-                <header></header>
+            <section class="main-section" id="Finding_Skywalker">
+                <header>Finding Skywalker</header>
+                <p>
+                    Having arrived on the water world of Ahch-To with the Wookiee Chewbacca and astromech droid R2-D2 aboard the Millennium Falcon, the Force-sensitive Rey meets Jedi Master Luke Skywalker. She hands him Skywalker's lightsaber but he tosses it over his shoulder and walks away. A puzzled Rey follows Luke into his hut in the nearby Jedi village. 
+                </p>
             </section>
-            <section class="main-section"></section>
+            <section class="main-section" id="Snoke's_lair">
+                <header>Snoke's lair</header>
+                <p>
+                    Kylo Ren exits a turbolift and enter Supreme Leader Snoke's throne room aboard the Mega-class Star Dreadnought Supremacy. Snoke commends Hux for his plan and sends him to the bridge to oversee the pursuit of the Resistance. After Hux leaves, Snoke recalls seeing in Ren the potential to become a new Darth Vader, but now doubts his apprentice's resolve to fully embrace the dark side of the Force. 
+                </p>
+                <p>
+                    He orders Ren to remove his helmet, and upon seeing his scarred face—the result of his loss to Rey on Starkiller Base—he states that Ren has too much of Han's heart in him. Ren protests, claiming he embraced the dark side by killing Han, but Snoke furiously retorts that Ren instead psychologically weakened himself in committing the murder, causing him to be defeated by Rey, a junk scavenger who had previously never even wielded a lightsaber. 
+                </p>
+                <p>
+                    Ren reacts angrily to the insult, but Snoke repulses him with Force lightning and dismisses him as just "a child in a mask." Enraged, Ren destroys his helmet by violently smashing it to pieces against the walls of an elevator, before setting out in his personal TIE silencer to attack the Resistance fleet. 
+                </p>
+            </section>
 
         </main>
 
