--- a/index.html
+++ b/index.html
@@ -5,6 +5,26 @@
             Technical Documentation Page
         </title>
 
+<nav id="navbar">
+    <ul>
+        <li>
+            <a class="nav-link" href="#Intro">Intro</a></li>
+        <li>
+            <a class="nav-link" href="#Evacuating_D'Qar">Evacuating D'Qar</a>
+        </li>
+        <li>
+            <a class="nav-link" href="#Bomber_run">Bomber run</a>
+        </li>
+        <li>
+            <a class="nav-link" href="Finding_Skywalker">Finding Skywalker</a>
+        </li>
+        <li>
+            <a class="nav-link" href="Snoke's_lair">Snoke's lair</a>
+        </li>
+    </ul>
+</nav>
+
+
     </head>
     <body>
         <main id="#main">
@@ -18,7 +38,8 @@
                     now deploys his merciless
                     legions to seize military
                     control of the galaxy.
-
+                    </p>
+                    <p>
                     Only General Leia Organa's
                     band of RESISTANCE fighters
                     stand against the rising
@@ -26,7 +47,8 @@
                     Master Luke Skywalker will
                     return and restore a spark of
                     hope to the fight.
-
+                   </p>
+                   <p>
                     But the Resistance has been
                     exposed. As the First Order
                     speeds toward the Rebel base,
@@ -55,7 +77,7 @@
                 <header>Evacuating D'Qar</header>
                 <article>
                     <p>
-                        Following their successful operation to destroy Starkiller Base, Resistance fighters evacuate their main base on the planet D'Qar onto their fleet. Before they can complete their evacuation, First Order starships under General Armitage Hux arrive. Seeking to destroy the Resistance, Hux orders Captain Moden Canady to destroy the Resistance fleet and base with his Mandator IV-class Siege Dreadnought Fulminatrix. 
+                        Following their successful operation to destroy Starkiller Base, <code>Resistance</code> fighters evacuate their main base on the planet D'Qar onto their fleet. Before they can complete their evacuation, First Order starships under General Armitage Hux arrive. Seeking to destroy the Resistance, Hux orders Captain Moden Canady to destroy the Resistance fleet and base with his Mandator IV-class Siege Dreadnought Fulminatrix. 
                     </p>
                 </article>
             </section>
@@ -63,8 +85,19 @@
                 <header>Bomber run</header>
                 <article>
                     <p>
-                        With the Dreadnought's cannon's knocked out, Resistance bombers advanced on the Fulminatrix. Despite having starfighter escorts led by Blue Leader Tallissan Lintra, several of the slow moving bombers are destroyed by TIE fighters. Captain Canady orders that the dreadnought's auto cannons be recharged so that they can target the Resistance cruisers. Several Resistance bombers are destroyed by a colliding TIE fighter, leaving Paige Tico's Cobalt Hammer as the last remaining bomber. 
+                        With the Dreadnought's cannon's knocked out, <code>Resistance</code> bombers advanced on the Fulminatrix. Despite having starfighter escorts led by Blue Leader Tallissan Lintra, several of the slow moving bombers are destroyed by TIE fighters. Captain Canady orders that the dreadnought's auto cannons be recharged so that they can target the Resistance cruisers. Several Resistance bombers are destroyed by a colliding TIE fighter, leaving Paige Tico's Cobalt Hammer as the last remaining bomber. 
                     </p>
+                    <ul>
+                        <li>
+                            Despite Snoke's disappointment, Hux insists the <code>Resistance</code> cannot escape for long because they have them "tied on the end of a string." 
+                        </li>
+                        <li>
+                            Aboard the <code>MC85 Star Cruiser Raddus</code>, Finn, comatose after losing a fight with Ren on Starkiller Base, awakens and immediately starts looking for his friend, Rey
+                        </li>
+                        <li>
+                            Poe welcomes Finn back upon his return, telling him <code>Rey</code> has already left. 
+                        </li>
+                    </ul>
                 </article>
             </section>
             <section class="main-section" id="Finding_Skywalker">
