--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Syne&display=swap" rel="stylesheet"> 
         <title>
             Technical Documentation Page
         </title>
+      </head>
+  <body>
 
 <nav id="navbar">
+    <header>The Last Jedi Docu Page</header>
     <ul>
         <li>
-            <a class="nav-link" href="#Intro">Intro</a></li>
+            <a class="nav-link" href="#The_Last_Jedi_Docu_Page">Intro</a></li>
         <li>
             <a class="nav-link" href="#Evacuating_D'Qar">Evacuating D'Qar</a>
         </li>
@@ -25,8 +30,6 @@
 </nav>
 
 
-    </head>
-    <body>
         <main id="#main">
             <section class="main-section" id="The_Last_Jedi_Docu_Page">
                 <header>The Last Jedi Docu Page</header>
