--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>
             Technical Documentation Page
         </title>
+        <link rel="stylesheet" href="styles.css">
       </head>
   <body>
 
