fixed linked href

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <a class="nav-link" href="#Bomber_run">Bomber run</a>
         </li>
         <li>
-            <a class="nav-link" href="Finding_Skywalker">Finding Skywalker</a>
+            <a class="nav-link" href="#Finding_Skywalker">Finding Skywalker</a>
         </li>
         <li>
-            <a class="nav-link" href="Snoke's_lair">Snoke's lair</a>
+            <a class="nav-link" href="#Snoke's_lair">Snoke's lair</a>
         </li>
     </ul>
 </nav>
